Styling improvements: - Mobile navbar icons improved - anchor links restyled - modal popups no longer create a second scrollbar

--- a/app/styles/app-internal.scss
+++ b/app/styles/app-internal.scss
@@ -12,6 +12,7 @@
 /*==============================================================================*/
 body {
 	background-color: #EDEDED;
+        overflow: auto;
 }
 
 /*
