--- a/app/styles/app-main.scss
+++ b/app/styles/app-main.scss
@@ -51,6 +51,17 @@ p{
   font-family: 'Open Sans', sans-serif;
 }
 
+a{
+  &:link, &:visited{
+    color: $primary-color;
+    &:hover, &:active{
+      color: $pill-text-hover;
+    }
+    //color: $pill-text-hover;
+
+  }
+}
+
 .fullscreen{
 	height: 100vh;
 	width: 100vw;
@@ -678,7 +689,7 @@ body{
       transition: transform 600ms ease;
   &:hover {
     cursor: pointer; 
-    @include box-shadow(0px 0px 8px 2px rgba(0,0,0,0.7));
+    @include box-shadow(0px 0px 6px 2px rgba(0,0,0,0.3));
     @include transform (scale(1.05));
    }
   margin-left: auto;
@@ -695,7 +706,7 @@ body{
   transition: transform 600ms ease;
   &:hover {
     cursor: pointer; 
-    @include box-shadow(0px 0px 8px 2px rgba(0,0,0,0.7));
+    @include box-shadow(0px 0px 6px 2px rgba(0,0,0,0.3));
     @include transform (scale(1.05));
    }
   margin-left: auto;
@@ -878,3 +889,9 @@ html {
 [data-ember-action] {
     cursor: pointer;
 }
+
+//Stop modals from creating second scrollbar
+body.modal-open{overflow:hidden!important;}
+
+/*Optional:*/
+.modal-open, .modal{padding-right:0!important}
